@@ -4,6 +4,8 @@
       registered with the jsXe application. This will allow implementation of
       a feature to allow users to set key mnemonics (shortcuts) to actions
       easier.
+    * Fixed a bug that caused jsXe to not allow you to open documents that
+      were not well formed.
 
 07/24/2004  version 0.2 pre12   Ian Lewis <IanLewis@member.fsf.org>
 
